2007-03-18  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (_load_pylab): Make the execution of 'from
	pylab import *' when -pylab is given be optional.  A new flag,
	pylab_import_all controls this behavior, the default is True for
	backwards compatibility.

	* IPython/ultraTB.py (_formatTracebackLines): Added (slightly
	modified) R. Bernstein's patch for fully syntax highlighted
	tracebacks.  The functionality is also available under ultraTB for
	non-ipython users (someone using ultraTB but outside an ipython
	session).  They can select the color scheme by setting the
	module-level global DEFAULT_SCHEME.  The highlight functionality
	also works when debugging.

	* IPython/genutils.py (IOStream.close): small patch by
	R. Bernstein for improved pydb support.

	* IPython/Debugger.py (Pdb.format_stack_entry): Added patch by
	DaveS <davls@telus.net> to improve support of debugging under
	NTEmacs, including improved pydb behavior.

	* IPython/Magic.py (magic_prun): Fix saving of profile info for
	Python 2.5, where the stats object API changed a little.  Thanks
	to a bug report by Paul Smith <paul.smith-AT-catugmt.com>.
	
	* IPython/ColorANSI.py (InputTermColors.Normal): applied Nicolas
	Pernetty's patch to improve support for (X)Emacs under Win32.

2007-03-17  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (hijack_wx): ipmort WX with current semantics
	to quiet a deprecation warning that fires with Wx 2.8.  Thanks to
	a report by Nik Tautenhahn.

2007-03-16  Walter Doerwald  <walter@livinglogic.de>

	* setup.py: Add the igrid help files to the list of data files
	to be installed alongside igrid.
	* IPython/Extensions/igrid.py: (Patch by Nik Tautenhahn)
	Show the input object of the igrid browser as the window tile.
	Show the object the cursor is on in the statusbar.

2007-03-15  Ville Vainio  <vivainio@gmail.com>

	* Extensions/ipy_stock_completers.py: Fixed exception
        on mismatching quotes in %run completer. Patch by